spring-petclinic/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: petclinic
          image: balaji36490/petclinic:4f2d4bb
          ports:
            - containerPort: 8080
