spring-petclinic/manifests/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: petclinic
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
