spring-petclinic/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  selector:
    app: petclinic
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
